<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">白菜帮</string>
    <string name="app_introduce">最实用的校园互助平台</string>
    <string name="app_wecome">欢迎微信联系我们</string>
    <string name="myqq">客服QQ:1224820395</string>
    <string name="myphone">联系电话：18363850138</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登      录</string>
    <string name="regist">注册</string>
    <string name="phonenum">手机号</string>
    <string name="pwd">密码</string>
    <string name="lostpwd">找回密码</string>
    <string name="registernow">立即注册</string>
    <string name="detail">详情</string>
    <string name="title_pub_task">发布消息</string>
    <string name="please_setting_info">您还没有设置用户信息，不能发布哦</string>
    <string name="please_login">请登录</string>
    <string name="pubtask">发布</string>
    <string name="pubtask_hint">你在想什么...</string>
    <string name="login_upload_icon">上传图片</string>
    <string name="regist_gender">性别：</string>
    <string name="login_now">直接登录</string>
    <string name="regist_submit">提交</string>
    <string name="regist_phone_hint">请输入手机号码</string>
    <string name="regist_pwd_hint">输入密码</string>
    <string name="regist_code_hint">输入验证码</string>
    <string name="regist_getcode">点击获取验证码</string>
    <string name="target">最实用的校园互助平台</string>
    <string name="phone_not_empty">电话号码不能为空</string>
    <string name="fail_to_get_code">获取验证码失败</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="login_please_input_pwd">请输入密码</string>
    <string name="login_login_fail">用户名或密码输入有误</string>
    <string name="connecting">连接服务器</string>
    <string name="connecting_for_wait">正在连接，请稍等...</string>
    <string name="fail_to_load_task">加载内容失败</string>
    <string name="fail_to_load_comments">加载评论失败</string>
    <string name="pub_comment">发表评论</string>
    <string name="content_not_empty">评论内容不能为空</string>
    <string name="fail_to_pub_comment">发表评论失败</string>
    <string name="success_to_pub_comment">发表评论成功</string>
    <string name="fail_to_pub_task">发表评论失败</string>
    <string name="success_to_pub_task">发表评论成功</string>
    <string name="regist_new_account">注册新账号</string>
    <string name="login_account">登录账号</string>
    <string name="setting_up">设置</string>
    <string name="signout">直接退出</string>
    <string name="main">进入主页</string>
    <string name="my_pub_task">我的发布</string>
    <string name="about_us">关于我们</string>
    <string name="notifiation_setting">消息推送:</string>
    <string name="real_name">真实姓名</string>
    <string name="campus">学校</string>
    <string name="realname_not_empty">真实姓名不能为空</string>
    <string name="campul_not_empty">学校不能为空</string>
    <string name="success_setting_up">设置成功</string>
    <string name="mytask">我的发布</string>
    <string name="pwd_not_empty">请输入密码</string>
    <string name="fail_to_regist">该用户已被注册</string>
    <string name="login_fail_unknow">登录失败，请重试</string>
    <string name="fail_to_setting_up">设置失败，请稍后再试</string>
    <string name="reply">回复</string>
    <string name="fail_to_pub_care">关注失败</string>
    <string name="success_to_care">关注成功</string>
    <string name="not_any">没有更多</string>
    <string name="already_care">已关注</string>
</resources>
