<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="75.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_weight="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/notifiation_setting"
                android:textColor="#ff656c74"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginRight="85.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_weight="2.0" >

            <ImageView
                android:id="@+id/iv_setting_notfition"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:src="@drawable/msp_switch_2x_on" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="90.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_weight="1.0" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/regist_gender"
                android:textColor="#ff656c74"
                android:textSize="12.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginRight="90.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_weight="2.0" >

            <ImageView
                android:id="@+id/iv_setting_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:src="@drawable/male" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="30.0dip"
            android:background="@drawable/card_three"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:layout_weight="1.0" >

                    <EditText
                        android:id="@+id/et_setting_real_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:hint="@string/real_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="10.0dip"
                        android:paddingLeft="10.0dip"
                        android:paddingRight="10.0dip"
                        android:paddingTop="10.0dip"
                        android:singleLine="true"
                        android:textColor="#ff656c74"
                        android:textColorHint="#ffa3a3a3"
                        android:textSize="12.0sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.100000024dip"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:background="#ffcccccc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5.0dip"
                    android:layout_weight="1.0" >

                    <EditText
                        android:id="@+id/et_setting_campus"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:hint="@string/campus"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingBottom="10.0dip"
                        android:paddingLeft="10.0dip"
                        android:paddingRight="10.0dip"
                        android:paddingTop="10.0dip"
                        android:singleLine="true"
                        android:textColor="#ff656c74"
                        android:textColorHint="#ffa3a3a3"
                        android:textSize="12.0sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <TableLayout
            android:id="@+id/setting_suggest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip" />

        <Button
            android:id="@+id/btn_setting_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="20.0dip"
            android:background="@drawable/publishbtn"
            android:paddingBottom="5.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/regist_submit"
            android:textColor="@android:color/white"
            android:textSize="15.0sp" />
    </LinearLayout>

</LinearLayout>