<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <com.jeremyfeinstein.slidingmenu.lib.SlidingMenu
        xmlns:sliding="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_slidinglogin_show_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <com.loopj.android.image.SmartImageView
                    android:id="@+id/iv_user_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000000"
                    android:textSize="22sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.00000024dip"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff" />

            <LinearLayout
                android:id="@+id/ll_slidinglogin_enter_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_item_selector_v2"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/main"
                    android:textColor="@drawable/menu_item_text_selector"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.100000024dip"
                android:background="#ffa3a3a3" />

            <LinearLayout
                android:id="@+id/ll_slidinglogin_mytask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_item_selector"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/my_task_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/my_pub_task"
                    android:textColor="@drawable/menu_item_text_selector_v2"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.100000024dip"
                android:background="#ffa3a3a3" />

            <LinearLayout
                android:id="@+id/ll_slidinglogin_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/menu_item_selector" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/settint_up_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/setting_up"
                    android:textColor="@drawable/menu_item_text_selector_v2"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.100000024dip"
                android:background="#ffa3a3a3" />

            <LinearLayout
                android:id="@+id/ll_slidinglogin_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/menu_item_selector" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_signout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/signout"
                    android:textColor="@drawable/menu_item_text_selector_v2"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.100000024dip"
                android:background="#ffa3a3a3" />

            <LinearLayout
                android:id="@+id/ll_slidinglogin_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/menu_item_selector" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/aboutus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/about_us"
                    android:textColor="@drawable/menu_item_text_selector_v2"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.100000024dip"
                android:background="#ffa3a3a3" />
        </LinearLayout>
    </com.jeremyfeinstein.slidingmenu.lib.SlidingMenu>

</LinearLayout>